# CosmoGW

./: .flake8  README.md  pyproject.toml  references.md  setup.py
.github/workflows/: python-package.yml  python-package_nbs.yml
docs/: Makefile  conf.py  requirements.txt
docs/source/: GW_analytical.rst  GW_back.rst  GW_models.rst  GW_templates.rst  analysis.rst  api.rst  conf.py  cosmoGW.rst  cosmology.rst  hydro_bubbles.rst  index.rst  interferometry.rst  usage.rst  utils.rst
src/cosmoGW/: GW_analytical.py  GW_back.py  GW_fopt.py  GW_models.py  GW_templates.py  __init__.py  analysis.py  cosmoGW.py  cosmology.py  hydro_bubbles.py  interferometry.py  plot_sets.py  utils.py
src/cosmoGW/resources/higgsless/: parameters_fit_sims.csv
tests/: cosmo_cGW.ipynb  test_sound_waves.py
tests/GWs_sound_waves/: K0_Esp_HL.npz  K0_Esp_HL.pkl  K2ints_exp_HL.pkl  K2ints_flat_HL.npz  K2ints_flat_HL.pkl  OmGWtilde_HL.pkl  Oms_sws1.npz  Oms_sws1.pkl  prefs_HL.pkl  shapes2_sw_HL.npz  shapes2_sw_HL.pkl  shapes3_sw_HL.pkl  shapes_sw_HL.pkl  shell_thickness_HL.pkl  tdur_eddy_HL.npz  tdur_eddy_HL.pkl
tests/sound_waves_turb_GWs/: K2ints_exp_HL.npz  OmGWs_sound_waves_1p.npz  OmGWs_sound_waves_HL_1p.npz  OmGWs_turbulence_1p.npz  OmGWtilde_HL.npz  OmLISA_PLS_1p.npz  prefs_HL.npz  shapes3_sw_HL.npz  shapes_sw_HL.npz  shell_thickness_HL.npz
tutorials/: GWB_MF_from_FOPT.ipynb  GWs_MF_from_FOPT.ipynb  GWs_sound-waves.ipynb  tutoria.ipynb
