[tool.black]
line_length = 80

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmoGW"
version = "0.0.8"
authors = [
  { name="Alberto Roper Pol", email="alberto.roperpol@unige.ch" },
]
description='code for cosmological gravitational wave backgrounds'
readme='README.md'
dependencies = [
  "matplotlib",
  "numpy",
  "importlib",
  "pandas",
  "astropy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License",
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/cosmoGW/cosmoGW"

[tool.setuptools.packages.find]
where = ["src/cosmoGW/resources"]

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.rst", "*.txt"]
